--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.blob {
+  width: 300px;
+  height: 300px;
+  border-radius: 70% 90% 70% 90%;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, rgb(132, 187, 255));
 }
 
-.App-link {
-  color: #61dafb;
+.blob img {
+  width: 200px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 0;
+ }
+ 
+::-webkit-scrollbar-track {
+  border: 7px solid #232943;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
   }
-  to {
-    transform: rotate(360deg);
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(90deg, #1c1e27, #313e4e);
+    border-radius: 1rem;
   }
+
+
+.card{
+
 }
+
+.cardcover{
+  transform: translateY(-100%);
+}
+
+
+
+  
+
+
+
+
+
