--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .blob {
   width: 300px;
   height: 300px;
@@ -7,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, rgb(132, 187, 255));
+  background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, rgba(20, 126, 255, 0.329));
 }
 
 .blob img {
@@ -19,32 +18,16 @@
 ::-webkit-scrollbar {
   width: 10px;
   height: 0;
- }
- 
+}
+
 ::-webkit-scrollbar-track {
   border: 7px solid #232943;
   box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
-  }
-  ::-webkit-scrollbar-thumb {
-    background: linear-gradient(90deg, #1c1e27, #313e4e);
-    border-radius: 1rem;
-  }
-
-
-.card{
-
 }
 
-.cardcover{
-  transform: translateY(-100%);
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(90deg, #1c1e27, #313e4e);
+  border-radius: 1rem;
 }
-
-
-
-  
-
-
-
-
 
