--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .blob {
-  width: 300px;
-  height: 300px;
+  width:100%;
+  height:280px;
+  max-width:300px;
   border-radius: 70% 90% 70% 90%;
   overflow: hidden;
   display: flex;
