--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, rgba(20, 126, 255, 0.329));
+  /* background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, #147eff54); */
 }
 
 .blob img {
   width: 200px;
 }
 
-
+body{
+  /* background: linear-gradient(360deg,#070b16,#0f172a) !important; */
+}
 
 ::-webkit-scrollbar {
   width: 10px;
@@ -22,13 +24,13 @@
 }
 
 ::-webkit-scrollbar-track {
+
   border: 7px solid #232943;
-  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 1rem;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(90deg, #1c1e27, #313e4e);
+  background: linear-gradient(90deg, #1f2336, #3c4147);
   border-radius: 1rem;
 }
 
