--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,43 @@
 .blob {
-  width:100%;
-  height:280px;
-  max-width:300px;
+  width: 100%;
+  height: 280px;
+  max-width: 300px;
   border-radius: 70% 90% 70% 90%;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-image: linear-gradient(-180deg, #7309ec, #3c4bcf, #147eff54); */
 }
 
 .blob img {
   width: 200px;
 }
+
+.typewriter h1 {
+  border-right: .15em solid ;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: .15em;
+  animation:
+    typing 3s steps(30, end)
+}
+
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
+}
+
+
+
+
+
 
 
 
@@ -31,4 +56,3 @@
   background: linear-gradient(90deg, #1f2336, #3c4147);
   border-radius: 1rem;
 }
-
